fixed .summary label overflow bug

--- a/ui/sass/modules/_managelists.sass
+++ b/ui/sass/modules/_managelists.sass
@@ -33,6 +33,8 @@
     +padding-leader(.25)
     +padding-trailer(.25)
   .summary
+    label
+      padding: 0
     p
       margin-bottom: 0
 
